--- a/src/main/webapp/resources/css/interview.css
+++ b/src/main/webapp/resources/css/interview.css
@@ -3,15 +3,16 @@
 }
 
 .custom-left {
-    top: 10%;
+    top: 9%;
     left: 1%;
     bottom: 0;
     width: 19%;
+    height: 90%;
 }
 .custom-main {
     width: 78%;
     height: 70%;
-    top: 10%;
+    top: 9%;
     left: 21%;
     margin-right: 1%;
 }
@@ -23,7 +24,27 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
-
+.custom-result {
+    position: fixed;
+    width: 37%;
+    height: 19%;
+    top: 80%;
+    left: 62%;
+}
+.custom-result .progress {
+    position: absolute;
+    top: 70%;
+    left: 15%;
+    width: 70%;
+}
+.custom-result .result {
+    position: absolute;
+    font-size: 20px;
+    top: 15%;
+    width: 100%;
+    text-align: center;
+    color: #BEC8C8;
+}
 .custom-table > tbody > tr > td > input {
     border: none;
     color: #fff;
@@ -36,6 +57,7 @@
 .custom-table > tbody > tr > td > input,
 .custom-comments > input {
     text-align: center;
+    vertical-align: middle;
 }
 .custom-table > tbody > tr > td > div {
     width: 81%;
@@ -57,14 +79,14 @@
 }
 .custom-comments {
     position: fixed;
-    width: 78%;
-    height: 20%;
+    width: 40%;
+    height: 19%;
     left: 21%;
-    top: 78%;
+    top: 80%;
 }
 .custom-comments > textarea {
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 80%;
 }
 
 textarea,
@@ -79,14 +101,14 @@ textarea,
 }
 .custom-comments > input {
     position: absolute;
-    top: 20%;
-    width: 47%;
-    margin-left: 2%;
+    top: 81%;
+    width: 80%;
 }
 .custom-comments > button {
     position: absolute;
-    top: 50%;
-    left: 70%;
+    width: 19%;
+    top: 81.5%;
+    left: 81%;
 }
 
 #text-question-comment {
@@ -113,8 +135,13 @@ textarea,
 #question-table {
     height: inherit;
 }
+
 .loading td {
     background: url("../images/icons/preload_xs.gif") no-repeat center center;
+}
+
+#res {
+
 }
 
 
